# kanchi

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cliff.toml  docker-compose.yaml  start.sh
agent/: app.py  config.py  connection_manager.py  constants.py  database.py  event_handler.py  log_formatter.py  main.py  metrics.py  migrate.py  models.py  monitor.py  pyproject.toml  run_tests.sh  seed_database.py  worker_health_monitor.py
agent/alembic/: env.py
agent/alembic/versions/: ccfacd9fe52b_retried_by_text_to_json.py
agent/api/: action_config_routes.py  auth_routes.py  config_routes.py  environment_routes.py  log_routes.py  metrics_routes.py  registry_routes.py  session_routes.py  task_routes.py  websocket_routes.py  worker_routes.py  workflow_routes.py
agent/security/: __init__.py  auth.py  dependencies.py  tokens.py
agent/services/: __init__.py  action_config_service.py  action_executor.py  app_config_service.py  auth_service.py  daily_stats_service.py  environment_service.py  orphan_detection_service.py  progress_service.py  retention_service.py  session_service.py  task_registry_service.py  task_service.py  utils.py  worker_service.py  workflow_engine.py  workflow_executor.py  workflow_service.py
agent/services/actions/: base.py  retry_action.py  slack_action.py
agent/tests/: base.py  conftest.py
agent/tests/perf/: bench_performance.py
agent/tests/unit/: test_app_config_service.py  test_config.py  test_connection_manager.py  test_daily_stats_service.py  test_environment_service.py  (+28 more)
agent/utils/: payload_sanitizer.py
(+19 files in other folders)
