[project]
name = "kanchi"
version = "0.1.0"
description = "Real-time Celery task monitoring"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery>=5.3.0",
    "kombu>=5.3.0",
    "amqp>=5.1.0",
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.12",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.1",
    "aiohttp>=3.8,<3.13",
    "prometheus-client>=0.22.0",
    "kanchi-sdk>=0.0.1",
]

[project.optional-dependencies]
db-postgres-async = ["asyncpg>=0.30.0"]
db-mysql-native = ["mysqlclient>=2.2.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.uv]
required-version = ">=0.11.0"

[tool.ruff]
line-length = 120
force-exclude = true
extend-exclude = [
    "alembic/versions/",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "C90",
    "UP",
    "PT",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
